--- a/spin2/spin1.language-configuration.json
+++ b/spin2/spin1.language-configuration.json
@@ -1,8 +1,20 @@
 {
   "comments": {
-    "lineComment": "'"
+    "lineCommentDoc": "''",
+    "lineComment": "'",
+    "blockCommentDoc": ["{{", "}}"],
+    "blockComment": ["{", "}"]
   },
-  "brackets": [["(", ")"]],
+  "brackets": [
+    ["{", "}"],
+    ["[", "]"],
+    ["(", ")"]
+  ],
   "autoClosingPairs": [{ "open": "(", "close": ")", "notIn": ["string", "comment"] }],
-  "surroundingPairs": [["(", ")"]]
+  "surroundingPairs": [
+    ["{", "}"],
+    ["[", "]"],
+    ["(", ")"],
+    ["\"", "\""]
+  ]
 }
