Monitor tabbing updates, but ver for release
- Ensure `org`, `asm` and `end`, `endasm` lines use PUB/PRI tabstops
- Ensure Deconflict "Tab" with "Tab to Autocomplete"
- Adjust auto-closing pairs behavior (dialing things in slowly)

--- a/spin2/spin1.language-configuration.json
+++ b/spin2/spin1.language-configuration.json
@@ -1,20 +1,26 @@
 {
   "comments": {
-    "lineCommentDoc": "''",
     "lineComment": "'",
-    "blockCommentDoc": ["{{", "}}"],
-    "blockComment": ["{", "}"]
+    "blockComment": ["{", "}"],
+    "lineCommentDoc": "''",
+    "blockCommentDoc": ["{{", "}}"]
   },
   "brackets": [
     ["{", "}"],
     ["[", "]"],
     ["(", ")"]
   ],
-  "autoClosingPairs": [{ "open": "(", "close": ")", "notIn": ["string", "comment"] }],
+  "autoClosingPairs": [
+    { "open": "{", "close": "}", "notIn": ["string", "comment"] },
+    { "open": "[", "close": "]", "notIn": ["string", "comment"] },
+    { "open": "(", "close": ")", "notIn": ["string", "comment"] },
+    { "open": "\"", "close": "\"", "notIn": ["string", "comment"] }
+  ],
   "surroundingPairs": [
     ["{", "}"],
     ["[", "]"],
     ["(", ")"],
     ["\"", "\""]
-  ]
+  ],
+  "wordPattern": "(-?\\d*\\.\\d\\w*)|([^\\`\\~\\!\\@\\#\\%\\^\\&\\*\\(\\)\\-\\=\\+\\[\\{\\]\\}\\\\\\|\\;\\:\\'\\\"\\,\\.\\<\\>\\/\\?\\s]+)"
 }
