--- a/spin2/spin2.language-configuration.json
+++ b/spin2/spin2.language-configuration.json
@@ -1,16 +1,21 @@
 {
   "comments": {
-    "lineCommentDoc": "''",
     "lineComment": "'",
-    "blockCommentDoc": ["{{", "}}"],
-    "blockComment": ["{", "}"]
+    "blockComment": ["{", "}"],
+    "lineCommentDoc": "''",
+    "blockCommentDoc": ["{{", "}}"]
   },
   "brackets": [
     ["{", "}"],
     ["[", "]"],
     ["(", ")"]
   ],
-  "autoClosingPairs": [["{", "}"], ["[", "]"], ["(", ")"], { "open": "\"", "close": "\"", "notIn": ["string"] }],
+  "autoClosingPairs": [
+    { "open": "{", "close": "}", "notIn": ["string", "comment"] },
+    { "open": "[", "close": "]", "notIn": ["string", "comment"] },
+    { "open": "(", "close": ")", "notIn": ["string", "comment"] },
+    { "open": "\"", "close": "\"", "notIn": ["string", "comment"] }
+  ],
   "surroundingPairs": [
     ["{", "}"],
     ["[", "]"],
