Fixes to object section spin2/spin
- Addresses no-whitespace semantic parsing issue (#15)

--- a/spin2/.devcontainer/devcontainer.json
+++ b/spin2/.devcontainer/devcontainer.json
@@ -1,6 +1,6 @@
 // See https://aka.ms/vscode-remote/devcontainer.json for format details.
 {
-  "name": "Boilerplate Card Development",
+  "name": "My Extension Development",
   "image": "node:latest",
   "context": "..",
   "appPort": ["5000:5000", "9123:8123"],
