--- a/spin2/package.json
+++ b/spin2/package.json
@@ -3,7 +3,7 @@
   "displayName": "Spin2",
   "description": "Spin2/Pasm2 Syntax/Semantic Highlighting w/Code Outline and Custom tabbing support",
   "icon": "images/Propeller.ico",
-  "version": "1.8.6",
+  "version": "1.8.7",
   "publisher": "IronSheepProductionsLLC",
   "repository": {
     "type": "git",
@@ -44,7 +44,7 @@
   "contributes": {
     "themes": [
       {
-        "label": "Spin2 Ironsheep",
+        "label": "Spin2 Ironsheep Dark",
         "uiTheme": "vs-dark",
         "path": "./themes/isp-spin-theme.json"
       },
