--- a/.github/ISSUE_TEMPLATE/bug-report.yaml
+++ b/.github/ISSUE_TEMPLATE/bug-report.yaml
@@ -1,5 +1,5 @@
 name: 🐛 Bug Report
-description: Report an issue you are experiencing with the Spin2 Syntax/Semantic Highlighter VScode Extension
+description: Report an issue you are experiencing with the Spin2 VScode Extension.
 labels:
   - bug
 
